<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent">

        <!--Main Linear layout-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#FFFFFF"
            android:orientation="vertical"
            android:padding="15dp">

            <!-- Android Quizz Title text view-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/main_title"
                android:textColor="#D81B60"
                android:textSize="25sp"
                android:textStyle="bold" />

            <!--Question 1 title-->

            <TextView
                style="@style/questionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/question_1_title" />

            <!--Question 1-->
            <TextView
                android:id="@+id/q1_textView"
                style="@style/questions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/question_One" />

            <!--Question 1 radio group-->
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rb_Q1_option1"
                    style="@style/answers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_1_option1" />

                <RadioButton
                    android:id="@+id/rb_Q1_option2"
                    style="@style/answers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_1_option2" />

                <RadioButton
                    android:id="@+id/rb_Q1_option3"
                    style="@style/answers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_1_option3" />
            </RadioGroup>

            <!--Question 2 title-->

            <TextView
                style="@style/questionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/question_2_title" />

            <!--Question 2-->
            <TextView
                android:id="@+id/q2_textView"
                style="@style/questions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/question_Two" />

            <!--Question2 Checkbox1 linear layout-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cb_Q2_option1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    style="@style/answers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question_2_option1" />

            </LinearLayout>

            <!--Question2 Checkbox2 linear layout-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cb_Q2_option2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    style="@style/answers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question_2_option2" />
            </LinearLayout>

            <!--Question2 Checkbox3 linear layout-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cb_Q2_option3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    style="@style/answers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question_2_option3" />

            </LinearLayout>


            <!--Question 3 title-->

            <TextView
                style="@style/questionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/question_3_title" />

            <!--Question 3-->
            <TextView
                android:id="@+id/q3_textView"
                style="@style/questions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/question_Three" />

            <EditText
                android:id="@+id/q3_edit_Text"
                style="@style/answers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="no"
                android:hint="@string/enter_your_answer_in_sec"
                android:inputType="text" />

            <!--Question 4 title-->

            <TextView
                style="@style/questionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/question_4_title" />

            <!--Question 4-->
            <TextView
                android:id="@+id/q4_textView"
                style="@style/questions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/question_Four" />

            <ImageView
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/jellybeanimage" />

            <!--Question4 Radio group-->
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rb_Q4_option1"
                    style="@style/answers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/android_jelly_bean" />

                <RadioButton
                    android:id="@+id/rb_Q4_option2"
                    style="@style/answers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/android_jet_pack" />

            </RadioGroup>

            <!--Question 5 title-->

            <TextView
                style="@style/questionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/question_5_title" />

            <!--Question 5-->
            <TextView
                android:id="@+id/q5_textView"
                style="@style/questions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/question_Five" />

            <!--Question5 Checkbox1 linear layout-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cb_Q5_option1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    style="@style/answers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_5_option1" />
            </LinearLayout>

            <!--Question5 Checkbox2 linear layout-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cb_Q5_option2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    style="@style/answers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_5_option2" />

            </LinearLayout>

            <!--Question Checkbox3 linear layout-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cb_Q5_option3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    style="@style/answers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_5_option3" />
            </LinearLayout>


            <Button
                android:id="@+id/score_submit_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/submit"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />


        </LinearLayout>
    </ScrollView>
</RelativeLayout>